--- a/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
@@ -7,10 +7,27 @@
     </a>
     <hr class="sidebar-divider my-0">
     <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/Dashboard/Index/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
     </li>
-    
+    <li class="nav-item">
+        <a class="nav-link" href="/Category/CategoryList/">
+            <i class="fas fa-fw fa-car-alt"></i>
+            <span>Kategoriler</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Product/ProductList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Ürünler</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Notification/NotificationList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Bildirimler</span>
+        </a>
+    </li>
 </ul>
