--- a/TasteFood/Views/Category/UpdateCategory.cshtml
+++ b/TasteFood/Views/Category/UpdateCategory.cshtml
@@ -27,9 +27,12 @@
                             @Html.HiddenFor(x=>x.CategoryId)
                             <label for="exampleInputCategory">Kategori Adı</label>
                             @Html.TextBoxFor(x => x.CategoryName, new { @class="form-control"})
+
+
+
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Gönder</button>
                     </form>
                 </div>
             </div>
