--- a/TasteFood/Views/Category/CategoryList.cshtml
+++ b/TasteFood/Views/Category/CategoryList.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container-fluid" id="container-wrapper">
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Simple Tables</h1>
+        <h1 class="h3 mb-0 text-gray-800">Kategoriler</h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="./">Ana Sayfa</a></li>
             <li class="breadcrumb-item">Kategoriler</li>
@@ -18,9 +18,9 @@
         <div class="col-lg-12 mb-4">
             <!-- Simple Tables -->
             <div class="card">
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                @*<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">Simple Tables</h6>
-                </div>
+                </div>*@
                 <div class="table-responsive">
                     <table class="table align-items-center table-flush">
                         <thead class="thead-light">
@@ -39,13 +39,13 @@
                                 <td>@item.CategoryId</td>
                                 <td>@item.CategoryName</td>
                                 <td><a href="#" class="btn btn-sm btn-primary">Kategori Alt Ürünler</a></td>
-                                <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-sm btn-primary">Sil</a></td>
-                                <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-sm btn-primary">Güncelle</a></td>
+                                <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-sm btn-danger">Sil</a></td>
+                                <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-sm btn-info">Güncelle</a></td>
                             </tr>
                             }
                         </tbody>
                     </table>
-                    <a href="">Yeni Kategori Girişi</a>
+                    <td><a href="/Category/CreateCategory/" class="btn btn-sm btn-success">Yeni Kategori Girişi</a></td>
                 </div>
                 <div class="card-footer"></div>
             </div>
