--- a/TasteFood/Views/Default/PartialAbout2.cshtml
+++ b/TasteFood/Views/Default/PartialAbout2.cshtml
@@ -1,20 +1,26 @@
-﻿<section class="ftco-section ftco-no-pt ftco-no-pb">
+﻿@model List<TasteFood.Entites.Aboutt>
+<section class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container">
-        <div class="row d-flex">
-            <div class="col-md-6 d-flex">
-                <div class="img img-2 w-100 mr-md-2" style="background-image: url(images/bg_6.jpg);"></div>
-                <div class="img img-2 w-100 ml-md-2" style="background-image: url(images/bg_4.jpg);"></div>
-            </div>
-            <div class="col-md-6 ftco-animate makereservation p-4 p-md-5">
-                <div class="heading-section ftco-animate mb-5">
-                    <span class="subheading">This is our secrets</span>
-                    <h2 class="mb-4">Perfect Ingredients</h2>
-                    <p>
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-                    </p>
-                    <p><a href="#" class="btn btn-primary">Learn more</a></p>
+        @foreach (var item in Model)
+        {
+            <div class="row d-flex">
+
+                <div class="col-md-6 d-flex">
+
+                    <div class="img img-2 w-100 mr-md-2" style="background-image: url(@item.ImageUrl);"></div>
+                    <div class="img img-2 w-100 ml-md-2" style="background-image: url(@item.ImageUrl2);"></div>
+                </div>
+                <div class="col-md-6 ftco-animate makereservation p-4 p-md-5">
+                    <div class="heading-section ftco-animate mb-5">
+                        <span class="subheading">@item.Title</span>
+                        <h2 class="mb-4">@item.Title2</h2>
+                        <p>
+                           @item.Description
+                        </p>
+                        <p><a href="#" class="btn btn-primary">Daha fazla</a></p>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 </section>
