--- a/TasteFood/Views/Default/PartialAbout.cshtml
+++ b/TasteFood/Views/Default/PartialAbout.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="col-sm-8 wrap-about py-5 ftco-animate img" style="background-image: url(@ViewBag.image);">
+﻿
+<div id="hakkimizda" class="col-sm-8 wrap-about py-5 ftco-animate img" style="background-image: url(@ViewBag.image);">
     
     <div class="row pb-5 pb-md-0">
         <div class="col-md-12 col-lg-7">
