--- a/TasteFood/Views/Default/PartialBook.cshtml
+++ b/TasteFood/Views/Default/PartialBook.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TasteFood.Entites.Reservation
-<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
-    <form action="#" class="appointment-form">
+<div  class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
+    <form id="rezervasyon" action="#" class="appointment-form">
         <h3 class="mb-3">MASANIZI AYIRTIN</h3>
         <div class="row">
             <div class="col-md-12">
