--- a/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
@@ -7,6 +7,12 @@
     </a>
     <hr class="sidebar-divider my-0">
     <li class="nav-item">
+        <a class="nav-link" href="/Profile/Index/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Profilim</span>
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="/Dashboard/Index/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
@@ -28,6 +34,42 @@
         <a class="nav-link" href="/Notification/NotificationList/">
             <i class="fas fa-fw fa-tablet-alt"></i>
             <span>Bildirimler</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Chef/ChefList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Şefler</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Reservation/ReservationList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Rezervasyonlar</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Testimonial/TestimonialList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Müşteri Yorumları</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Aboutt/AbouttList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Hakkımızda İşlemleri</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/PartialSlider/PartialSliderList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Slider İşlemleri</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Footer/FooterList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>Footer İşlemleri</span>
         </a>
     </li>
 </ul>
