--- a/TasteFood/Views/Default/PartialChef.cshtml
+++ b/TasteFood/Views/Default/PartialChef.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<TasteFood.Entites.Chef>
 
-<section class="ftco-section bg-light">
+<section id="seflerimiz" class="ftco-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-2">
             <div class="col-md-7 text-center heading-section ftco-animate">
