--- a/TasteFood/Views/Default/PartialNavbar.cshtml
+++ b/TasteFood/Views/Default/PartialNavbar.cshtml
@@ -7,13 +7,12 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="index.html" class="nav-link">Ana Sayfa</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">Hakkımızda</a></li>
-                <li class="nav-item"><a href="chef.html" class="nav-link">Şeflerimiz</a></li>
-                <li class="nav-item"><a href="menu.html" class="nav-link">Menü</a></li>
-                <li class="nav-item"><a href="reservation.html" class="nav-link">Rezarvasyon</a></li>
-                <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
+                <li class="nav-item active"><a href="#anasayfa" class="nav-link">Ana Sayfa</a></li>
+                <li class="nav-item"><a href="#hakkimizda" class="nav-link">Hakkımızda</a></li>
+                <li class="nav-item"><a href="@Url.Action("index","chef")" class="nav-link">Şeflerimiz</a></li>
+                <li class="nav-item"><a href="@Url.Action("index","product")" class="nav-link">Menü</a></li>
+                <li class="nav-item"><a href="#rezervasyon" class="nav-link">Rezarvasyon</a></li>
+                <li class="nav-item"><a href="#iletisim" class="nav-link">İletişim</a></li>
             </ul>
         </div>
     </div>
