--- a/TasteFood/Views/Footer/FooterList.cshtml
+++ b/TasteFood/Views/Footer/FooterList.cshtml
@@ -1,8 +1,67 @@
-﻿
+﻿@model List<TasteFood.Entites.Footer>
 @{
     ViewBag.Title = "FooterList";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h2>FooterList</h2>
+<h2>Footer</h2>
+
+<div class="container-fluid" id="container-wrapper">
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./">Ana Sayfa</a></li>
+            <li class="breadcrumb-item">Footer</li>
+            <li class="breadcrumb-item active" aria-current="page">Footer İşlemeleri</li>
+        </ol>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 mb-4">
+            <!-- Simple Tables -->
+            <div class="card">
+              
+                <div class="table-responsive">
+                    <table class="table align-items-center table-flush">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Footer ID</th>
+                                <th>Açıklama</th>
+                                <th>Social Media1</th>
+                                <th>Social Media2</th>
+
+                                <th>Social Media3</th>
+                                <th>Sil</th>
+
+                                <th>Güncelle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+
+                                <tr>
+                                    <td>@item.FooterId</td>
+
+                                    <td>@item.Description</td>
+                                    <td>@item.SocialMedia1</td>
+                                    <td>@item.SocialMedia2</td>
+                                    <td>@item.SocialMedia3</td>
+
+
+                                  
+                                    <td><a href="/Footer/UpdateFooter/@item.FooterId" class="btn btn-sm btn-primary">Güncelle</a></td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                
+                </div>
+                <div class="card-footer"></div>
+            </div>
+        </div>
+    </div>
+    <!--Row-->
+
+
+</div>
 
