--- a/TasteFood/Views/Profile/Index.cshtml
+++ b/TasteFood/Views/Profile/Index.cshtml
@@ -1,35 +1,95 @@
-﻿
+﻿@model TasteFood.Entites.Admin
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h2>ProductList</h2>
 
 <div class="container-fluid" id="container-wrapper">
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Simple Tables</h1>
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./">Ana Sayfa</a></li>
-            <li class="breadcrumb-item">Profilim</li>
-            <li class="breadcrumb-item active" aria-current="page">Şifre Değiştir</li>
-        </ol>
-    </div>
 
-    <div class="row">
-        <div class="col-lg-12 mb-4">
-            <!-- Simple Tables -->
-            <div class="card">
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                   
-                </div>
-                <h3>Kullanıcı Adınız: <h3>Kullanıcı Adınız: @(ViewBag.v ?? "Not Available")</h3></h3>
-                <div class="card-footer"></div>
+    <div class="col-lg-12">
+        <!-- Form Basic -->
+        <div class="card mb-4">
+
+            <div class="card-body">
+                <div class="col-lg-10">  <h1> Profil Paneline Hoşgeldiniz @ViewBag.v </h1></div>
+                <div class="col-lg-2"><img style="width: 100px; height: 100px;" src="@Model.ImageUrl" class="img-thumbnail"></div>
             </div>
+            <div class="card-body">
+                <form method="post">
+                    <div class="row justify-content-center">
+                        @Html.HiddenFor(x => x.AdminId)
+
+                        @Html.HiddenFor(x => x.Username)
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="exampleCategory">İsim</label>
+
+                                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+
+
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="exampleCategory">Soyisim</label>
+
+                                @Html.TextBoxFor(x => x.Surname, new { @class = "form-control" })
+
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="exampleCategory">Sifre</label>
+
+                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control" })
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label>Mevcut Görsel</label>
+                                @*<label>
+                                    <span>@Model.ImageUrl</span>
+                                </label>*@
+
+
+                                <div class="form-group ">
+                                    <div class="custom-file ">
+                                        <input type="file" class="custom-file-input bg-danger" id="customFile" name="ImageUrl" onchange="updateFileName(this)">
+                                        <label class="custom-file-label" for="customFile">@Model.ImageUrl</label>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-12 text-center">
+                            <button type="submit" class="btn btn-primary">Güncelle</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <br /><br />
+
+
+
+
         </div>
     </div>
-    <!--Row-->
-
-
 </div>
 
+
+
+
+
+<!--Row-->
+
+
+
+<script src="~/Templates/ruang-admin/js/demo/choosefilesprofile.js"></script>
