--- a/TasteFood/Views/AdminLayout/PartialNavbar.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialNavbar.cshtml
@@ -37,22 +37,22 @@
                 </h6>
                 @foreach (var item in Model)
                 {
-                <a class="dropdown-item d-flex align-items-center" href="/AdminLayout/NotificationStatusChangeTrue/@item.NotificationId">
-                    <div class="mr-3">
-                        <div class="@item.IconCircleColor">
-                            <i class="@item.NotificationIcon"></i>
+                    <a class="dropdown-item d-flex align-items-center" href="/AdminLayout/NotificationStatusChangeTrue/@item.NotificationId">
+                        <div class="mr-3">
+                            <div class="@item.IconCircleColor">
+                                <i class="@item.NotificationIcon"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div>
-                        <div class="small text-gray-500">@item.Date.ToShortDateString()</div>
-                        <span class="font-weight-bold">@item.Description</span>
-                    </div>
-                </a>
+                        <div>
+                            <div class="small text-gray-500">@item.Date.ToShortDateString()</div>
+                            <span class="font-weight-bold">@item.Description</span>
+                        </div>
+                    </a>
                 }
                 <a class="dropdown-item text-center small text-gray-500" href="#">Tüm Bildirimleri Göster</a>
             </div>
         </li>
-        <li class="nav-item dropdown no-arrow mx-1">
+        @*<li class="nav-item dropdown no-arrow mx-1">
             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
                aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-envelope fa-fw"></i>
@@ -141,33 +141,10 @@
                 </a>
                 <a class="dropdown-item text-center small text-gray-500" href="#">View All Taks</a>
             </div>
-        </li>
+        </li>*@
         <div class="topbar-divider d-none d-sm-block"></div>
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="img/boy.png" style="max-width: 60px">
-                <span class="ml-2 d-none d-lg-inline text-white small">Maman Ketoprak</span>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Profile
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
-                </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="javascript:void(0);" data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Logout
-                </a>
-            </div>
-        </li>
+
+        @Html.Action("PartialProfile", "AdminLayout")
+
     </ul>
 </nav>
