--- a/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
@@ -3,7 +3,7 @@
         <div class="sidebar-brand-icon">
             <img src="~/Template/ruang-admin/img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">RuangAdmin</div>
+        <div class="sidebar-brand-text mx-3">Admin Paneli</div>
     </a>
     <hr class="sidebar-divider my-0">
     <li class="nav-item">
@@ -15,7 +15,7 @@
     <li class="nav-item">
         <a class="nav-link" href="/Dashboard/Index/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
+            <span>İstatistikler</span>
         </a>
     </li>
     <li class="nav-item">
@@ -55,9 +55,15 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/Aboutt/AbouttList/">
+        <a class="nav-link" href="/About/AboutList/">
             <i class="fas fa-fw fa-tablet-alt"></i>
             <span>Hakkımızda İşlemleri</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Aboutt/AbouttList/">
+            <i class="fas fa-fw fa-tablet-alt"></i>
+            <span>2. Hakkımızda İşlemleri</span>
         </a>
     </li>
     <li class="nav-item">
