--- a/TasteFood/Views/AdminLayout/PartialScript.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialScript.cshtml
@@ -2,4 +2,11 @@
 <script src="~/Template/ruang-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/Template/ruang-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
 <script src="~/Template/ruang-admin/js/ruang-admin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<script src="~/Template/ruang-admin/vendor/jquery/jquery.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="~/Template/ruang-admin/js/ruang-admin.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/chart.js/Chart.min.js"></script>
+<script src="~/Template/ruang-admin/js/demo/chart-area-demo.js"></script>
