--- a/TasteFood/Views/Dashboard/Index.cshtml
+++ b/TasteFood/Views/Dashboard/Index.cshtml
@@ -1,9 +1,31 @@
-﻿
+﻿@model List<TasteFood.Entites.Reservation>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
+
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="~/Template/ruang-admin/img/logo/logo.png" rel="icon">
+    <title>RuangAdmin - Dashboard</title>
+    <link href="~/Template/ruang-admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Template/ruang-admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Template/ruang-admin/css/ruang-admin.min.css" rel="stylesheet">
+</head>
+
+<script src="~/Template/ruang-admin/vendor/jquery/jquery.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="~/Template/ruang-admin/js/ruang-admin.min.js"></script>
+<script src="~/Template/ruang-admin/vendor/chart.js/Chart.min.js"></script>
+<script src="~/Template/ruang-admin/js/demo/chart-area-demo.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <div class="container-fluid" id="container-wrapper">
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
@@ -24,8 +46,7 @@
                             <div class="text-xs font-weight-bold text-uppercase mb-1">Kategori Sayısı</div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v1</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
-                                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                                <span>Since last month</span>
+                        
                             </div>
                         </div>
                         <div class="col-auto">
@@ -44,8 +65,7 @@
                             <div class="text-xs font-weight-bold text-uppercase mb-1">Ürün Sayısı</div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v2</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
-                                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                                <span>Since last years</span>
+                        
                             </div>
                         </div>
                         <div class="col-auto">
@@ -64,8 +84,7 @@
                             <div class="text-xs font-weight-bold text-uppercase mb-1">Şef Sayısı</div>
                             <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@ViewBag.v3</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
-                                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 20.4%</span>
-                                <span>Since last month</span>
+                           
                             </div>
                         </div>
                         <div class="col-auto">
@@ -84,8 +103,7 @@
                             <div class="text-xs font-weight-bold text-uppercase mb-1">Aktif Rezervasyonlar</div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v4</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
-                                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                                <span>Since yesterday</span>
+                            
                             </div>
                         </div>
                         <div class="col-auto">
@@ -97,6 +115,93 @@
         </div>
     </div>
     <!--Row-->
+    <div class="col-xl-8 col-lg-7">
+        <div class="card mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Veriler</h6>
+
+            </div>
+            <div class="card-body">
+                <div class="mb-3">
+                    <div class="small text-gray-500">
+                        Mesaj Sayısı
+                        <div class="small float-right"><b>@ViewBag.mesaj</b></div>
+                    </div>
+                    <div class="progress" style="height: 12px;">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width:@(Convert.ToInt32(ViewBag.mesaj) * 10)%" aria-valuenow="@ViewBag.mesaj"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="small text-gray-500">
+                        Rezervasyon sayısı
+                        <div class="small float-right"><b>@ViewBag.rezevasyon</b></div>
+                    </div>
+                    <div class="progress" style="height: 12px;">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: @(Convert.ToInt32(ViewBag.rezevasyon) * 10)%" aria-valuenow="@ViewBag.rezevasyon"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="small text-gray-500">
+                        Müşteri sayısı
+                        <div class="small float-right"><b>@ViewBag.müşteri</b></div>
+                    </div>
+                    <div class="progress" style="height: 12px;">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: @(Convert.ToInt32(ViewBag.müşteri) * 10)%" aria-valuenow="55"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="small text-gray-500">
+                        En pahalı ürün Fiyatı
+                        <div class="small float-right"><b>@ViewBag.productprice</b></div>
+                    </div>
+                    <div class="progress" style="height: 12px;">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: @ViewBag.productprice%" aria-valuenow="100"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="col-xl-8 col-lg-7 mb-4">
+        <div class="card">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Rezervasyon Listesi</h6>
+            </div>
+            <div class="table-responsive">
+                <table class="table align-items-center table-flush">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>İsim-Soyisim</th>
+                            <th>Misafir Sayısı</th>
+                            <th>Rezervasyon durumu</th>
+                         
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                        <tr>
+                      
+                            <td>@item.Name</td>
+                            <td>@item.GuestCount</td>
+                            <td><span class="badge badge-success">@item.ReservationStatus</span></td>
+            
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+            <div class="card-footer"></div>
+        </div>
+    </div>
+
+
 
 
 </div>
