--- a/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
+++ b/TasteFood/Views/AdminLayout/PartialSidebar.cshtml
@@ -7,6 +7,12 @@
     </a>
     <hr class="sidebar-divider my-0">
     <li class="nav-item">
+        <a class="nav-link" href="/Default/Index/">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Ana Sayfa</span>
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="/Profile/Index/">
             <i class="fas fa-fw fa-tablet-alt"></i>
             <span>Profilim</span>
